--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "The spirit of independence, freedom of thought."
 ---
 
 {% for post in paginator.posts %}
