feat: 个人信息修改

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is gaopq."
+description: "沉淀自己，终身学习"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -18,10 +18,9 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>事不辩不清<br>
         理不辨不明</p></blockquote>
 
-    <p>Hey，我是<strong>高强</strong>，战斗力渣渣的代码搬运工</p>
+    <p>Hey，我是<strong>Eric</strong>，一名终身学习者</p>
 
-    <p>我的GitHub主页<a href="https://github.com/peiqianggao">👉GitHub</a> 与简书主页<a
-            href="https://http://www.jianshu.com/u/8ba24037c555">👉peiqianggao</a>。如果有什么问题，欢迎交流~</p>
+    <p>GitHub主页<a href="https://github.com/peiqianggao">👉GitHub</a>我们都有无处安放的灵光一现，欢迎一起交流~</p>
 
     <p></p>
 </div>
