feat: 修改博客封面图

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "The spirit of independence, freedom of thought."
+description: ""
 ---
 
 {% for post in paginator.posts %}
